# Aether-flow

./: .gitignore  CITATION.cff  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
circuits/: Aether_flow_circuits_i.html
data/: README.md  sample_synthetic.csv
docs/: ARCHITECTURE.md  EXPERIMENT_PROTOCOL.md
firmware/: AetherFlow_Firmware.ino  AetherFlow_FirmwareGuide.docx  AetherFlow_FirmwareGuide.md
simulation/: AetherFlow_Assembly.html  AetherFlow_HowItWorks.html  AetherFlow_LayerAnimation.html  AetherFlow_WorkingModel.html  Aetherflow_componentcatalogue.html
software/: AetherFlow_DataLogger.py  AetherFlow_Train.py  Aether_flllow_train.py  requirements.txt
tests/: test_data_logger.py  test_train_pipeline.py
